correct filters overflow

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -200,3 +200,52 @@
    bottom: -20px;
    top: auto;
  }
+ 
+  .filter{
+    margin-bottom: 20px;
+    .filter-title{
+      font-size: 110%;
+      font-weight: bold;
+    }
+    .filter-values{
+      margin-top: 5;
+      border: 1px solid gray-light;
+      border-width: 1px 0 0 0;
+      .selected{
+        border: 1px solid gray-lighter;
+        border-width: 0 1 0 0;
+        list-style: none;
+        padding-left: 0;}
+        a{
+          &:before{
+            content: 'x';
+            margin-right: 5px;}
+          }
+      .selectable{
+        max-height: 100px;
+        overflow: scroll;
+        background-color: white;
+        list-style: none;
+        padding-left: 0;}
+      li{
+        a{
+          color: gray;
+          font-size: 90%;}
+          .count{
+            color: gray-light;
+            font-size: 70%;}
+      }
+    }
+  }
+      
+  form{
+      input, textarea, select, .uneditable-input {
+        border: 1px solid #bbb;
+        border-radius: 5px;
+        width: 100%;
+        padding: 10px;
+        height: auto !important;
+        margin-bottom: 15px;
+      }
+    }
+ 
